# Curator-for-Zotero

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ai-review-loop.yml  ci.yml  opencode.yml  release.yml
docs/: README.md  client-config.md  mcpb.md  optional-extras.md  release.md  roadmap.md  settings-and-safety.md  troubleshooting.md  workflows.md
mcpb/: manifest.json
scripts/: build-mcpb.sh  release-check.sh
src/zotero_curator/: __init__.py  arxiv.py  bibtex.py  cli.py  client.py  config.py  formatting.py  pdf_tools.py  runtime.py  semantic.py  server.py  settings.py
tests/: test_arxiv.py  test_bibtex.py  test_cli.py  test_client.py  test_core.py  test_formatting.py  test_runtime.py  test_server_helpers.py  test_settings.py
