[project]
name = "zotero-curator"
version = "0.1.0"
description = "Research-focused MCP server and setup helper for Zotero"
authors = [{ name = "Sphaela / JGSphaela contributors" }]
maintainers = [{ name = "Sphaela / JGSphaela contributors" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "zotero", "research", "citations", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.1",
    "platformdirs>=4.3.6",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
]
pdf = ["pymupdf>=1.24.0"]
semantic = ["chromadb>=0.5.0", "sentence-transformers>=3.0.0"]
all = [
    "pymupdf>=1.24.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
zotero-curator = "zotero_curator.cli:main"
zotero-mcp = "zotero_curator.cli:main"

[project.urls]
Repository = "https://github.com/JGSphaela/Curator-for-Zotero"
Issues = "https://github.com/JGSphaela/Curator-for-Zotero/issues"
Upstream = "https://github.com/kujenga/zotero-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_curator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
